<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".friday">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:background="#768AF6"
        android:gravity="center"
        android:fontFamily="cursive"
        android:text="@string/Lectures"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="337dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:background="#FA8CB0"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/course5"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="337dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:background="#84EEFB"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/course7"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="337dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:background="#A0FAA3"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/course6"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="40dp"
        android:background="#FB764C"
        android:gravity="center"
        android:fontFamily="cursive"
        android:text="@string/Labs_Tuts"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="337dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:background="#F8E96B"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/course7"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:background="#FA8CB0"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/time1"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:background="#84EEFB"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/time2"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/textView3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:background="#A0FAA3"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/time3"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="0dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:background="#F8E96B"
        android:fontFamily="casual"
        android:gravity="center"
        android:text="@string/time4"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

</androidx.constraintlayout.widget.ConstraintLayout>